# Tetris-DQN

./: .gitignore  README.md  eval_grouped_model.py  pyproject.toml  test.py  test_env.py  test_env_model.py  train.py  train_env_model.py  train_model.py  train_model_dqn.py
.github/workflows/: publish.yml
examples/: eval_grouped_model.py  eval_model.py  random_env.py  random_grouped_env.py  train_grouped_model.py  train_model.py
rl_tetris/: game_state.py  renderer.py
rl_tetris/envs/: tetris.py
rl_tetris/wrapper/: Grouped.py
src/: game_state.py  renderer.py  tetris.py  tetromino_queue.py
tests/: test_envs.py
